--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p><i class="material-icons">location_city</i> México</p>
        <!-- ... -->
     <!-- ADD THE RSVP BUTTON HERE -->
-    <button id="startRsvp">INICIAR SESIÓN</button>
+    <Button id="startRsvp">INICIAR SESIÓN</Button>
   </section>
 
   <hr>
